Replace the depcrecated URL(String) constructor with URI(String).toURL()
And replace the multi-arg constructors, too.